// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectPreviewCounter /> should not render without value 1`] = `""`;

exports[`<ProjectPreviewCounter /> should render correctly when project is archived 1`] = `
<ProjectPreviewCounter__StyledTag
  archived={true}
>
  32
   
  <FormattedMessage
    id="test"
    values={
      Object {
        "num": "32",
      }
    }
  />
</ProjectPreviewCounter__StyledTag>
`;

exports[`<ProjectPreviewCounter /> should render correctly with value 1`] = `
<ProjectPreviewCounter__StyledTag
  archived={false}
>
  32
   
  <FormattedMessage
    id="test"
    values={
      Object {
        "num": "32",
      }
    }
  />
</ProjectPreviewCounter__StyledTag>
`;

exports[`<ProjectPreviewCounter /> should render render an icon with icon value 1`] = `
<ProjectPreviewCounter__StyledTag
  archived={false}
  icon="cap cap-icon"
>
  1
   
  <FormattedMessage
    id="test"
    values={
      Object {
        "num": "1",
      }
    }
  />
</ProjectPreviewCounter__StyledTag>
`;

exports[`<ProjectPreviewCounter /> should render with showZero = true 1`] = `
<ProjectPreviewCounter__StyledTag
  archived={false}
>
  0
   
  <FormattedMessage
    id="test"
    values={
      Object {
        "num": "0",
      }
    }
  />
</ProjectPreviewCounter__StyledTag>
`;
